fixed layout issue

--- a/admin/src/layout/DashboardLayout/DashboardLayout.css
+++ b/admin/src/layout/DashboardLayout/DashboardLayout.css
@@ -116,7 +116,7 @@ html {
 }
 
 .right__dashboard-content {
-    padding: 80px 30px 0 30px;
+    padding: 90px 30px 0 30px;
 }
 
 
@@ -142,6 +142,14 @@ html {
         width: 100vw;
         left: 0;
     }
+
+    .nav__dashboardlayout {
+        left: 0;
+    }
+
+    .right__dashboard-content {
+        padding: 80px 30px 0 30px;
+    }
 }
 
 /* ============MEDIA QURIES(SMALL SCREEN)============== */
@@ -152,9 +160,5 @@ html {
 
     .nav__dashboardlayout {
         padding: 0 20px;
-    }
-
-    .right__dashboard-content {
-        padding: 20px 30px 0 20px;
     }
 }
